# Document-analyzer

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/api/: routes_health.py  routes_ocr.py
backend/core/: config.py  error_handlers.py  logging_config.py
backend/model/: classifier_model.pkl  vectorizer.pkl
backend/services/: classifier_service.py  extraction_service.py  health_service.py  ocr_service.py
frontend/: style.css
notebooks/: classification.ipynb
tests/: test_classifier.py  test_ocr.py
